--- a/css/index.css
+++ b/css/index.css
@@ -4,4 +4,36 @@
 
 }
 
+logo{
+    width: 23%;
+    padding: 1%
+}
 
+nav{
+    width: 73%;
+    padding: 1%
+}
+
+html ul{
+    width: 50%;
+    margin-left:auto;
+}
+
+logo{text-align: center;}
+
+heroImg{
+    height: 600px;
+    padding:25px;
+}
+
+footer{
+    background-color: #373738;
+    padding: auto;
+
+}
+
+ul{ 
+    display: inline;
+    vertical-align: top;
+padding:1%
+}
